argocd/manifests/hoarder/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoarder
  namespace: hoarder
  labels:
    app: hoarder
    app.kubernetes.io/name: hoarder
spec:
  type: ClusterIP
  selector:
    app: hoarder
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hoarder-redis
  namespace: hoarder
  labels:
    app: hoarder-redis
    app.kubernetes.io/name: hoarder-redis
spec:
  type: ClusterIP
  selector:
    app: hoarder-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hoarder-meilisearch
  namespace: hoarder
  labels:
    app: hoarder-meilisearch
    app.kubernetes.io/name: hoarder-meilisearch
spec:
  type: ClusterIP
  selector:
    app: hoarder-meilisearch
  ports:
    - name: http
      port: 7700
      targetPort: 7700
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: hoarder-chrome
  namespace: hoarder
  labels:
    app: hoarder-chrome
    app.kubernetes.io/name: hoarder-chrome
spec:
  type: ClusterIP
  selector:
    app: hoarder-chrome
  ports:
    - name: debug
      port: 9222
      targetPort: 9222
      protocol: TCP
