argocd/manifests/hoarder/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoarder-ingress
  namespace: hoarder
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: hoarder.levangie.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hoarder
                port:
                  number: 3000
